Improve par new with serial old analysis.